스크랩 관련 api 수정